<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ServiceTestDialog</class>
 <widget class="QDialog" name="ServiceTestDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QPushButton" name="startCient">
       <property name="text">
        <string>启动客户端</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="startService">
       <property name="text">
        <string>启动服务</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="stopService">
       <property name="text">
        <string>停止服务</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QTextEdit" name="showRecvData"/>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="QLineEdit" name="inputData"/>
     </item>
     <item>
      <widget class="QPushButton" name="sendData">
       <property name="text">
        <string>发送数据</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QLineEdit" name="showStatus"/>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
